fixed text wrap in messages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,6 +105,7 @@
     align-items: center;
 }
 .container-main {
+    width: 100%;
     display: flex;
 }
 .sidebar {
